--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		--gradientBottom: rgb(240, 248, 255, .8);
 	}
 	header {
-		background: url('***light mode banner image***');
+		background: url('https://i.imgur.com/dPVhwwM.jpeg');
 	}
 /* end light mode styling */
 
