--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			a:link { color: lightblue; }
 		}
 		header {
-			background: url('***dark mode banner image***');
+			background: url('https://i.imgur.com/dPVhwwM.jpeg');
 		}
 	}
 /* end dark mode styling */
